<resources>
    <string name="app_name">ToDoBenjaminBenoitIbra</string>
    <string name="textview">TextView</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="registerBtn">Sign Up</string>

</resources>
